# alive-v

./: .gitignore  .python-version  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  main.py  prompt_character.txt  prompt_important_memory_extract.txt  prompt_long_memory_summary.txt  prompt_multi_character_template.txt  prompt_multi_character_template_v2.txt  prompt_multi_character_template_v3.txt  prompt_relationship_summary.txt  prompt_template.txt  prompt_template_v2.txt  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py  models.py  prompts.py
app/routes/: auth_routes.py  event_routes.py  npc_routes.py  universe_routes.py
app/schemas/: auth.py
app/services/: auth_service.py  event_service.py  memory_service.py  npc_service.py  session_service.py  universe_service.py
