[tool.poetry]
name = "alive-v"
version = "0.1.0"
description = "Alive-V 프로젝트"
authors = ["Monet"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "0.7.0"
anyio = "4.8.0"
certifi = "2025.1.31"
click = "8.1.8"
distro = "1.9.0"
dotenv = "0.9.9"
fastapi = "0.115.8"
h11 = "0.14.0"
httpcore = "1.0.7"
httpx = "0.28.1"
idna = "3.10"
jiter = "0.8.2"
openai = "1.64.0"
psycopg2-binary = "2.9.10"
pydantic = "2.10.6"
python-dotenv = "1.0.1"
sniffio = "1.3.1"
starlette = "0.45.3"
tqdm = "4.67.1"
typing-extensions = "4.12.2"
uvicorn = "0.34.0"
anthropic = "^0.49.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
